feat: add Phase 7 distribution setup and config improvements
- Add GoReleaser config for cross-platform builds (linux/darwin/windows)
- Add npm package with postinstall binary download script
- Add Dockerfile with multi-stage Alpine build
- Add GitHub Actions CI/CD (release + ci workflows)
- Add CHANGELOG.md and Apache 2.0 LICENSE
- Update README with installation docs for all channels
- Refactor api_key to support env.VAR_NAME format
- Set default OpenAI base URL in init template
- Update .gitignore for dist/ and npm directories

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@ kothaset
 
 # Output Data
 *.jsonl
-*.json
-*.txt
 *.parquet
 /output/
 
@@ -30,3 +28,10 @@ kothaset
 # OS
 .DS_Store
 Thumbs.db
+
+# GoReleaser
+dist/
+
+# npm
+npm/bin/
+npm/node_modules/
