--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,10 +31,12 @@ builds:
 
 archives:
   - id: default
-    format: tar.gz
+    formats:
+      - tar.gz
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     name_template: >-
       {{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}
     files:
@@ -65,20 +67,16 @@ release:
   prerelease: auto
   name_template: "v{{.Version}}"
 
-# Homebrew tap
-brews:
+# Homebrew casks (replaces brews)
+homebrew_casks:
   - name: kothaset
     repository:
       owner: shantoislamdev
       name: homebrew-tap
-    directory: Formula
+    directory: Casks
     homepage: "https://github.com/shantoislamdev/kothaset"
     description: "High-quality dataset generation CLI for LLM training"
     license: "Apache-2.0"
-    install: |
-      bin.install "kothaset"
-    test: |
-      system "#{bin}/kothaset", "version"
 
 # Scoop manifest
 scoops:
@@ -90,20 +88,21 @@ scoops:
     description: "High-quality dataset generation CLI for LLM training"
     license: Apache-2.0
 
-# Docker images
-dockers:
-  - image_templates:
-      - "ghcr.io/shantoislamdev/kothaset:{{ .Tag }}"
-      - "ghcr.io/shantoislamdev/kothaset:v{{ .Major }}"
-      - "ghcr.io/shantoislamdev/kothaset:v{{ .Major }}.{{ .Minor }}"
-      - "ghcr.io/shantoislamdev/kothaset:latest"
-    dockerfile: Dockerfile
-    build_flag_templates:
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--platform=linux/amd64"
+# Docker images (v2 format)
+dockers_v2:
+  - images:
+      - "ghcr.io/shantoislamdev/kothaset"
+    tags:
+      - "{{ .Tag }}"
+      - "v{{ .Major }}"
+      - "v{{ .Major }}.{{ .Minor }}"
+      - "{{ if not .IsNightly }}latest{{ end }}"
+    labels:
+      org.opencontainers.image.created: "{{.Date}}"
+      org.opencontainers.image.title: "{{.ProjectName}}"
+      org.opencontainers.image.revision: "{{.FullCommit}}"
+      org.opencontainers.image.version: "{{.Version}}"
+      org.opencontainers.image.source: "{{.GitURL}}"
 
 # Announce release
 announce:
