ci: upgrade PyPI publishing to OIDC trusted publishers
- Separate build and publish into two jobs (security best practice)
- Use pypa/gh-action-pypi-publish@release/v1 with id-token: write
- Add GitHub environment 'pypi' for deployment protection
- No PYPI_TOKEN secret needed — uses OIDC authentication
- Auto-version from git tag (0.0.0 placeholder in source)

--- a/pip/pyproject.toml
+++ b/pip/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "kothaset"
-version = "1.0.0"
+version = "0.0.0"  # Auto-set from git tag during CI build
 description = "High-quality dataset generation CLI for LLM training"
 readme = "README.md"
 license = {text = "Apache-2.0"}
