--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-  pypi-publish:
+  pypi-build:
     needs: goreleaser
     runs-on: ubuntu-latest
     steps:
@@ -73,9 +73,6 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install build tools
-        run: pip install twine
-
       - name: Get version from tag
         id: version
         run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
@@ -84,9 +81,27 @@ jobs:
         working-directory: pip
         run: python scripts/build_wheels.py --version ${{ steps.version.outputs.VERSION }}
 
+      - name: Upload wheels as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-wheels
+          path: pip/dist/*.whl
+          if-no-files-found: error
+
+  pypi-publish:
+    needs: pypi-build
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/kothaset
+    permissions:
+      id-token: write
+    steps:
+      - name: Download wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: python-wheels
+          path: dist/
+
       - name: Publish to PyPI
-        working-directory: pip
-        run: twine upload dist/*.whl --non-interactive
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        uses: pypa/gh-action-pypi-publish@release/v1
