--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Copy README to npm package
+        run: cp README.md npm/README.md
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -67,6 +70,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Copy README to pip package
+        run: cp README.md pip/README.md
 
       - name: Set up Python
         uses: actions/setup-python@v5
