Update homepage url

--- a/npm/package.json
+++ b/npm/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/shantoislamdev/kothaset/issues"
   },
-  "homepage": "https://github.com/shantoislamdev/kothaset#readme",
+  "homepage": "https://kothaset.pages.dev",
   "keywords": [
     "llm",
     "dataset",
