fix(npm): fix CLI command not working after npm install
The bin field pointed directly to ./bin/kothaset which is downloaded
during postinstall. This caused npm to fail creating the CLI symlink.

- Add cli.js wrapper script as the bin entry point
- Wrapper executes the downloaded binary and passes all arguments
- Fixes kothaset command not found after npm install -g kothaset

--- a/npm/package.json
+++ b/npm/package.json
@@ -24,7 +24,7 @@
     "gpt"
   ],
   "bin": {
-    "kothaset": "./bin/kothaset"
+    "kothaset": "./scripts/cli.js"
   },
   "scripts": {
     "postinstall": "node scripts/postinstall.js"
