feat: change checkpoint interval default from 50 to 10 and make it configurable via kothaset.yaml

--- a/examples/kothaset.yaml
+++ b/examples/kothaset.yaml
@@ -22,6 +22,13 @@ instructions:
   - Vary the style and complexity of responses
   - Use clear and concise language
 
+# Profiles: Named presets for different generation scenarios
+profiles:
+  default:
+    description: Default generation settings
+    generation:
+      checkpoint_every: 10  # Save checkpoint every N samples (default: 10)
+
 logging:
   level: info
   format: text
